--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,27 @@
 *.iml
 .gradle
-.idea
+/local.properties
+.idea/*
+
+# Keep the code styles.
+!/.idea/codeStyles
+/.idea/codeStyles/*
+!/.idea/codeStyles/Project.xml
+!/.idea/codeStyles/codeStyleConfig.xml
+
+# Keep the dictionaries.
+!/.idea/dictionaries
+/.idea/dictionaries/*
+!/.idea/dictionaries/aplhaDictionary.xml
+
+# Keep the project icon.
+!/.idea/icon.png
+
 .DS_Store
 build
-captures
+*/build
+/captures
 .externalNativeBuild
 .cxx
+xcuserdata/
 local.properties
-xcuserdata
